Add phoenix 1.4 and elixir 1.6 support

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,4 +1,4 @@
-FROM elixir:1.6
+FROM elixir:1.7
 
 ENV SCAFFOLD_APP_NAME=phoenix_app \
     DATABASE_USER=postgres \
@@ -14,7 +14,7 @@ RUN mix local.hex --force \
 RUN apt-get update \
     && apt-get install -y inotify-tools
 
-RUN mix archive.install --force https://github.com/phoenixframework/archives/raw/master/phx_new-1.3.0.ez
+RUN mix archive.install --force hex phx_new 1.4.0
 
 WORKDIR /app
 ADD . /app
