Add ports to default toml config

--- a/src/_templates/config/defaults.toml
+++ b/src/_templates/config/defaults.toml
@@ -3,3 +3,9 @@ username = "postgres"
 password = "postgres"
 database = "postgres"
 hostname = "db"
+
+[example_app."ExampleAppWeb.Endpoint".http]
+port = "8000"
+
+[example_app."ExampleAppWeb.Endpoint".url]
+port = "8000"
