--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 .DS_Store
 
 # Docker
-docker/config/db.env
-docker/config/web.env
+docker/config/elixir.env
 docker/config/db_backup.env
 docker/files/db-dumps/*
 !docker/files/db-dumps/.gitkeep
