--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,10 +39,9 @@ jobs:
   checkout_code:
     <<: *defaults
     docker:
-      - image: frojd/elixir-ubuntu-18-04:1.8
-      - image: mdillon/postgis:9.5
-      - image: circleci/python:3.6
-      #- image: redis:3.2
+      - image: frojd/elixir-ubuntu-20-04:1.11
+      - image: postgis/postgis:12-2.5-alpine
+      - image: circleci/python:3.8
     steps:
       - checkout
       - save_cache:
@@ -52,7 +51,7 @@ jobs:
   phoenix:
     <<: *defaults
     docker:
-      - image: frojd/elixir-ubuntu-18-04:1.8
+      - image: frojd/elixir-ubuntu-20-04:1.11
         environment:
           DATABASE_USER: postgres
           DATABASE_PASSWORD: postgres
@@ -60,10 +59,11 @@ jobs:
           DATABASE_TEST_NAME: postgres_test
           DATABASE_HOST: localhost
           REDIS_HOST: localhost
-      - image: mdillon/postgis:9.5
+      - image: postgis/postgis:12-2.5-alpine
         environment:
           POSTGRES_USER: postgres
-      #- image: redis:3.2
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
 
     steps:
       - *attach_workspace
@@ -108,7 +108,7 @@ jobs:
   deploy:
     <<: *defaults
     docker:
-      - image: circleci/python:3.6
+      - image: circleci/python:3.8
     steps:
       - *attach_workspace
       - *restore_repo
